# structure-rule-kit

./: README.md  WHY_GNW.md  pyproject.toml
examples/coding_project/structure/: protocols.md  roadmap.md
examples/minimal/structure/: protocols.md  roadmap.md
experimental/closure/: REAL_TRACE_2026-06-16.md
experimental/company/: README.md
structure_rule_kit/: __init__.py  agent_brief.py  agent_export.py  agent_sync.py  cli.py  config.py  context_git.py  github_bridge.py  mcp_scaffold.py  mcp_server.py  model_api.py  network.py  roundtable.py  run_task.py  runtime.py  session.py  skill_export.py  templates.py  worknet.py
tests/: test_agent_ecosystem.py  test_context_git.py  test_generator.py  test_github_bridge.py  test_model_api.py  test_roundtable.py  test_runtime.py  test_workflow_runner.py
