[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structure-rule-kit"
version = "0.4.0"
description = "A project-structure rule layer for AI coding and research agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Structure Rule Kit Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
structure-rule = "structure_rule_kit.cli:main"

[tool.setuptools.package-data]
structure_rule_kit = ["py.typed"]

[tool.setuptools.packages.find]
include = ["structure_rule_kit*"]
exclude = ["examples*", "templates*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
