[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structure-rule-kit"
version = "1.4.0"
description = "Agent GitHub Worknet: a local-first GitHub work network for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Structure Rule Kit Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
structure-rule = "structure_rule_kit.cli:main"

[tool.setuptools.package-data]
structure_rule_kit = ["py.typed"]

[tool.setuptools.packages.find]
include = ["structure_rule_kit*"]
exclude = ["examples*", "templates*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
