[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structure-rule-kit"
version = "1.5.1"
description = "Agent GitHub Worknet: a local-first GitHub work network for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Structure Rule Kit Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = ["build", "coverage", "mypy", "pytest", "ruff"]

[project.scripts]
structure-rule = "structure_rule_kit.cli:main"
structure-rule-mcp-server = "structure_rule_kit.mcp_server:main"

[tool.setuptools.package-data]
structure_rule_kit = ["py.typed"]

[tool.setuptools.packages.find]
include = ["structure_rule_kit*"]
exclude = ["examples*", "templates*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = false
ignore_errors = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["structure_rule_kit"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
